--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
         "graphology-layout-forceatlas2": "^0.6.1",
         "laravel-mix": "^6.0.29",
         "markdown-it": "^12.2.0",
-        "markdown-it-block-embed": "^0.0.3",
         "markdown-it-meta": "^0.0.1",
-        "markdown-it-oembed": "^1.1.0",
+        "markdown-it-oembed": "github:Greaby/markdown-it-oembed",
         "markdown-it-title": "^4.0.0",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.39.0",
