--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@babel/preset-env": "^7.15.4",
         "gh-pages": "^3.2.3",
         "graphology": "^0.21.0",
+        "graphology-layout": "^0.4.0",
         "graphology-layout-forceatlas2": "^0.6.1",
         "laravel-mix": "^6.0.29",
         "markdown-it": "^12.2.0",
