--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "slugify": "^1.6.0",
         "stream-http": "^3.2.0",
         "twig": "^1.15.4"
+    },
+    "dependencies": {
+        "@primer/css": "^17.11.0"
     }
 }
