--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "sass": "^1.39.0",
         "sass-loader": "^12.1.0",
         "sigma": "^2.0.0-beta9",
+        "sitemap": "^7.0.0",
         "slugify": "^1.6.0",
         "stream-http": "^3.2.0",
         "twig": "^1.15.4"
