--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "graphology-layout": "^0.4.0",
         "graphology-layout-forceatlas2": "^0.6.1",
         "graphology-pagerank": "^1.1.0",
+        "html-minifier": "^4.0.0",
         "laravel-mix": "^6.0.29",
         "markdown-it": "^12.2.0",
         "markdown-it-meta": "^0.0.1",
