--- a/package.json
+++ b/package.json
@@ -12,25 +12,27 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@babel/preset-env": "^7.15.4",
+        "@babel/preset-env": "^7.15.8",
         "gh-pages": "^3.2.3",
-        "graphology": "^0.21.0",
         "graphology-layout": "^0.4.0",
         "graphology-layout-forceatlas2": "^0.6.1",
         "graphology-pagerank": "^1.1.0",
         "html-minifier": "^4.0.0",
-        "laravel-mix": "^6.0.29",
+        "laravel-mix": "^6.0.34",
         "markdown-it": "^12.2.0",
         "markdown-it-meta": "^0.0.1",
         "markdown-it-oembed": "github:Greaby/markdown-it-oembed",
         "markdown-it-title": "^4.0.0",
         "resolve-url-loader": "^4.0.0",
-        "sass": "^1.39.0",
-        "sass-loader": "^12.1.0",
-        "sigma": "^2.0.0-beta9",
+        "sass": "^1.43.2",
+        "sass-loader": "^12.2.0",
         "sitemap": "^7.0.0",
-        "slugify": "^1.6.0",
+        "slugify": "^1.6.1",
         "stream-http": "^3.2.0",
         "twig": "^1.15.4"
+    },
+    "dependencies": {
+        "graphology": "^0.21.0",
+        "sigma": "^2.0.0-beta14"
     }
 }
