update to sigmjs 2.0.0

--- a/package.json
+++ b/package.json
@@ -33,6 +33,6 @@
     },
     "dependencies": {
         "graphology": "^0.21.0",
-        "sigma": "^2.0.0-beta14"
+        "sigma": "^2.0.0"
     }
 }
