--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "twig": "^1.15.4"
     },
     "dependencies": {
+        "fuse.js": "^6.4.6",
         "graphology": "^0.21.0",
         "sigma": "^2.0.0"
     }
