--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dependencies": {
         "fuse.js": "^6.5.3",
         "graphology": "^0.23.2",
+        "seedrandom": "^3.0.5",
         "sigma": "^2.1.3"
     }
 }
