--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "graphology-layout-forceatlas2": "^0.8.1",
         "graphology-pagerank": "^1.1.0",
         "html-minifier": "^4.0.0",
+        "kd-tree-javascript": "^1.0.3",
         "laravel-mix": "^6.0.39",
         "markdown-it": "^12.3.2",
         "markdown-it-meta": "^0.0.1",
@@ -26,6 +27,7 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.48.0",
         "sass-loader": "^12.4.0",
+        "seedrandom": "^3.0.5",
         "sitemap": "^7.1.0",
         "slugify": "^1.6.5",
         "stream-http": "^3.2.0",
@@ -34,7 +36,6 @@
     "dependencies": {
         "fuse.js": "^6.5.3",
         "graphology": "^0.23.2",
-        "seedrandom": "^3.0.5",
         "sigma": "^2.1.3"
     }
 }
